# Paddle-Lite-models

./: CMakeLists.txt  README.md  prepare_paddle_env.sh
classification/: CMakeLists.txt  classification_demo.cpp  compile.sh  filelist
cmake/: Dependencies.cmake  mlu.cmake
core/include/: core.hpp
detection/: CMakeLists.txt  detection.cpp  filelist
offline_demo/: 9911.data  compile.sh  offline_loader  offline_loader.cpp  resnet50_fp32_1_3_224_224.offline.cambricon_twins  resnet50_fp32_4c_1_3_224_224.offline.cambricon_twins  resnet50_fp32_mlu220_4c_1_3_224__224.offline.cambricon_twins  resnet50_int8_MLU220_4C_1_3_224_224.offline.cambricon_twins  resnet50_int8_MLU220_4C_4_3_224_224.offline.cambricon_twins  resnet50_int8_MLU270_4C_1_3_224_224.offline.cambricon_twins  resnet50_int8_MLU270_4C_4_3_224_224.offline.cambricon_twins
quant/: func.py  main.py  net.py
resnet50_benchmark/baidu_test/: compile.sh  resnet50_benchmark_baidu_test.cpp  run.sh
resnet50_benchmark/end2end/: compile.sh  filelist  resnet50_benchmark_end2end.cpp  run.sh
yolov3/: CMakeLists.txt  yolov3_demo.cpp
